Silent printing does not work on Linux - Firefox 59.x (print.always_print_silent=true)
Categories
(Core :: Printing: Output, defect, P3)
Tracking
()
People
(Reporter: tomjokiel, Assigned: emilio)
References
Details
(Keywords: regression, Whiteboard: [layout:print-triage:p3])
Attachments
(4 files)
|
17.09 KB,
text/plain
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-esr78+
|
Details | Review |
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-esr78+
|
Details | Review |
|
22.62 KB,
text/plain
|
Details |
Updated•8 years ago
|
Comment 3•7 years ago
|
||
Comment 5•7 years ago
|
||
Updated•7 years ago
|
Updated•7 years ago
|
Updated•7 years ago
|
Comment 9•7 years ago
|
||
| Reporter | ||
Comment 10•7 years ago
|
||
| Reporter | ||
Comment 11•7 years ago
|
||
Comment 12•7 years ago
|
||
I have the same issue with Fedora and Firefox 63: An error dialog or silent failure when print.always_print_silent is true.
Comment 13•7 years ago
|
||
Same problem in Ubuntu 16.04. Also happens when using the print() Javascript function.
Comment 14•7 years ago
|
||
Forgot to mention: my FF version ist: 65.0.1 (64-bit)
Comment 15•7 years ago
|
||
Same problem here on LUbuntu 18.04, Firefox 66 (64bits).
Don't know if there is a link, I can also see a dconf-warning : "unable to open /var/lib/snapd/desktop/dconf/profile/user : Permission denied" Indeed, there is nothing in /var/lib/snapd/desktop/
Updated•6 years ago
|
Comment 16•6 years ago
|
||
Hello,
I am also experiencing this bug with the on Firefox 69.0.2 on Ubuntu. I've also tried it with the nightly two days ago. I was hoping to use Firefox on all of our staff desks at my library for checking out, but with this bug, it will not be possible.
Comment 17•6 years ago
|
||
We're currently experiencing the same issue with Firefox 73.0.1 on Ubuntu 18.04.4. Setting this option will cause Firefox to crash.
We would like to use this option for a POS. Any update on this?
Comment 18•6 years ago
|
||
Same issue with Firefox 75.0 on Ubuntu 20.04.
It's a shame that we cannot use such a nice browser for print automation because of a silly 2 year old bug forgotten by everyone.
| Assignee | ||
Comment 19•6 years ago
|
||
So it seems this is likely a regression from bug 1425188 or such. I can take a look, I agree this is unfortunate.
| Assignee | ||
Comment 20•6 years ago
|
||
Not returning a valid target for print output causes the whole printing
progress to fail. When printing silent, we choose "native" format, which in the
GTK backend just fails because we return null (wat).
This fixes printing with print.always_print_silent. Printing via the file
dialog gets an explicit format so we don't hit that code path.
| Assignee | ||
Comment 21•6 years ago
|
||
So that it shows up in about:config (and also it's faster that way).
Depends on D79116
Comment 22•6 years ago
|
||
Comment 23•6 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/09465d16c95d
https://hg.mozilla.org/mozilla-central/rev/28d20aef861d
Updated•6 years ago
|
Comment 24•6 years ago
|
||
I don't understand why this issue has been marked as 'Closed'.
The error is still there in Firefox 79.0a1 under Ubuntu 20.4
Setting print.always_print_silent to true leads to error popup:
Printer Error
An error occurred while printing
and following console log:
(/usr/lib/firefox-trunk/firefox-trunk:24614): dconf-WARNING **: 10:57:36.223: Unable to open /var/lib/snapd/desktop/dconf/profile/user: Permission denied
IPDL protocol Error: Received an invalid file descriptor
Setting print.always_print_silent to false allows to perform printing successfully
| Assignee | ||
Comment 25•6 years ago
|
||
Are you sure this is with a build with the patch?
Comment 26•6 years ago
|
||
| Assignee | ||
Comment 27•6 years ago
|
||
That build doesn't have the patch, if you click in the link in comment 23, then you see:
- First release with: 20200610214041
While your build id is 20200610111348, which is from ~10 hours earlier.
Comment 28•6 years ago
|
||
Sorry for that Emilio and thank you for quick fixing :)
| Reporter | ||
Comment 29•6 years ago
|
||
Emilio,
Is there any chance to get this fix backported to the Firefox 78 ESR release?
Or we will need to wait another year or so till it hits the ESR branch?
Thank you for your work on this.
| Assignee | ||
Comment 30•6 years ago
|
||
Comment on attachment 9155627 [details]
Bug 1471854 - Don't make native format-choosing dependent on print preview. r=jwatt
Beta/Release Uplift Approval Request
- User impact if declined: Silent printing, which is important for automation of print testing, won't work on Linux.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0 (make sure that
print.print_to_fileis true if you don't have a printer to actually see the print output in your file system). - List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very simple change that unifies the print-preview and non-print-preview format choosing on GTK
- String changes made/needed: none
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 31•6 years ago
|
||
I think it's reasonable to try to uplift it to 78, but not my call.
Comment 32•6 years ago
|
||
I think this can ride to 79, but we can put it in the queue for 78.x (x > 0).
Updated•6 years ago
|
Updated•6 years ago
|
Updated•5 years ago
|
Comment 33•5 years ago
|
||
Comment on attachment 9155627 [details]
Bug 1471854 - Don't make native format-choosing dependent on print preview. r=jwatt
Approved for 78.1esr.
Updated•5 years ago
|
Comment 34•5 years ago
|
||
| bugherder uplift | ||
Comment 35•5 years ago
|
||
Hello,
I manage to reproduce the issue on the affected build 63.0a1(2018-06-28).
Confirming this issue as verified fixed with the latest 80.0a1 (2020-07-08), 79.0b5 , and the latest ESR build from Treeherder(20200630201553) on Ubuntu 18.04.
Description
•