Bug 1471854 - Don't make native format-choosing dependent on print preview. r=jwatt

Not returning a valid target for print output causes the whole printing
progress to fail. When printing silent, we choose "native" format, which in the
GTK backend just fails because we return null (wat).

This fixes printing with print.always_print_silent. Printing via the file
dialog gets an explicit format so we don't hit that code path.

Differential Revision: https://phabricator.services.mozilla.com/D79116